Major changes to weights

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<%= link_to 'Weights', weights_path %> | <%= link_to 'Players', players_path %> | <%= link_to 'Payments', payments_path %>
 <%= yield %>
 
 </body>
