--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -2,20 +2,20 @@
 
 <table>
   <tr>
+    <th>Date</th>
     <th>Player</th>
     <th>Amount</th>
-    <th></th>
-    <th></th>
     <th></th>
   </tr>
 
 <% @payments.each do |payment| %>
   <tr>
-    <td><%= payment.player_id %></td>
+    <td><%= payment.created_at.strftime("%d-%m-%Y") %></td>
+    <td><%= Player.find_by_id(payment.player_id).name %></td>
     <td><%= payment.amount %></td>
-    <td><%= link_to 'Show', payment %></td>
-    <td><%= link_to 'Edit', edit_payment_path(payment) %></td>
-    <td><%= link_to 'Destroy', payment, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Show', payment %> | 
+    <%= link_to 'Edit', edit_payment_path(payment) %> | 
+    <%= link_to 'Destroy', payment, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
