--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -5,18 +5,19 @@
   <%= @player.name %>
 </p>
 <table>
-<tr><td colspan=2><u>Payments</u></td></tr>
+<tr><td colspan=2>Payments</td></tr>
 <tr><th>Date</th><th>Amount</th></tr>
 <% @payments.each do |payment| %>
    <tr><td><%= payment.created_at.strftime("%d%b%y") %></td><td>$&nbsp;<%= payment.amount %></td></tr>
 <% end %>
+   <tr><td>Total</td><td>$&nbsp;<%= Payment.sum(:amount,:conditions => {:player_id =>@player.id}) %></td></tr>
 </table><br>
 <table>
-<tr><td colspan=2><u>Weights</u></td></tr>
-<tr><th>Week</th><th>Weight</th></tr>
+<tr><td colspan=2>Weights</td></tr>
+	<tr><th>Week</th><th>Weight</th><th>Week Lost</th><th>Week %</th><th>Total Lost</th><th>Total %</th></tr>
 <% @weights.each do |weight| %>
-   <tr><td><%= weight.week %></td><td><%= weight.weight %></td></tr>
+   <tr><td><%= weight.week %></td><td><%= weight.weight %></td><td><%= weight.week_loss %></td><td><%= number_to_percentage(weight.week_percent,:precision => 0) %></td><td><%= weight.total_loss %></td><td><%=  number_to_percentage(weight.total_percent,:precision => 0) %></td></tr>
 <% end %>
 </table><br>
 <%= link_to 'Edit', edit_player_path(@player) %> |
-<%= link_to 'Back', players_path %>
+<%= link_to 'Back', players_path %> | <%= link_to 'Add Weight', new_weight_path %>
