--- a/app/views/weights/show.html.erb
+++ b/app/views/weights/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <b>Player:</b>
-  <%= link_to @player.name, player_path(@player) %>
+  <%= link_to @weight.player.name, player_path(@weight.player.id) %>
 </p>
 
 <p>
