--- a/app/assets/stylesheets/default.css.scss
+++ b/app/assets/stylesheets/default.css.scss
@@ -20,18 +20,11 @@ h1, h2, h3 {
 	font-family: Arial, Helvetica, sans-serif;
 	letter-spacing: -1px;
 	color: #000000;
+        text-align: center;
 }
 
 p, ol, ul {
 	line-height: 1.67em;
-}
-
-a {
-	color: #66B929;
-}
-
-a:hover {
-	text-decoration: none;
 }
 
 hr {
@@ -46,7 +39,9 @@ hr {
 #wrapper-bgtop {
 	background: url(images/img02.jpg) no-repeat left top;
 }
-
+div {
+width:150px;
+}
 /* Header */
 
 #header {
@@ -136,17 +131,13 @@ td {
 	background: url(images/img03.gif) repeat-x left bottom;
 }
 
-#menu a {
-	display: block;
-	margin-left: 5px;
-	padding: 15px 20px;
-	background: url(images/img04.jpg) no-repeat left 24px;
+a.menu {
 	text-decoration: none;
-	text-transform: lowercase;
+	text-transform: uppercase;
 	font-family: Georgia, "Times New Roman", Times, serif;
 	font-weight: normal;
-	font-size: 24px;
-	color: #A9FE6B;
+	font-size: 16px;
+	color: blue;
 }
 
 #menu a:hover, #menu .active a {
@@ -357,4 +348,32 @@ td {
 
 #legal a {
 	text-decoration: none;
+}
+
+#flash_notice, #flash_error, #flash_alert {
+  padding: 5px 8px;
+  margin: 10px 0;
+}
+
+#flash_notice {
+  background-color: #CFC;
+  border: solid 1px #6C6;
+}
+
+#flash_error, #flash_alert {
+  background-color: #FCC;
+  border: solid 1px #C66;
+}#flash_notice, #flash_error, #flash_alert {
+  padding: 5px 8px;
+  margin: 10px 0;
+}
+
+#flash_notice {
+  background-color: #CFC;
+  border: solid 1px #6C6;
+}
+
+#flash_error, #flash_alert {
+  background-color: #FCC;
+  border: solid 1px #C66;
 }
