--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,5 +1,21 @@
-<h1>New player</h1>
+<h1>Sign Up</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', players_path %>
+<%= form_for @player do |f| %>
+  <% if @player.errors.any? %>
+    <div class="error_messages">
+      <h2>Form is invalid</h2>
+      <ul>
+        <% for message in @player.errors.full_messages %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+<table>
+  <tr><td><%= f.label :name %></td><td><%= f.text_field :name %></td></tr>
+  <tr><td><%= f.label :email %></td><td><%= f.text_field :email %></td></tr>
+  <tr><td><%= f.label :password %></td><td><%= f.password_field :password %></td></tr>
+  <tr><td><%= f.label :password_confirmation %></td><td><%= f.password_field :password_confirmation %></td></tr>
+</table>
+  <div class="actions"><%= f.submit %></div>
+<% end %>
