--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b><br>
+  <b>Name:</b>
   <%= @player.name %>
 </p>
 <table>
@@ -23,5 +23,8 @@
 <td><%=  number_to_percentage(weight.total_percent,:precision => 0) %></td></tr>
 <% end %>
 </table><br>
-<%= link_to 'Edit', edit_player_path(@player) %> |
-<%= link_to 'Back', players_path %> | <%= link_to 'Add Weight', new_weight_path(:player_id => @player.id) %>
+<%= link_to 'Back', players_path %>
+
+<% if current_user && current_user.name == 'admin' %>
+<%= link_to 'Edit', edit_player_path(@player) %> | <%= link_to 'Add Weight', new_weight_path(:player_id => @player.id) %>
+<% end %>
