added image and some css

--- a/app/assets/stylesheets/default.css.scss
+++ b/app/assets/stylesheets/default.css.scss
@@ -8,7 +8,7 @@ Released for free under a Creative Commons Attribution 2.5 License
 body {
 	margin: 0px;
 	padding: 0px;
-	background: #FFFFFF url(images/img01.jpg) repeat-x left top;
+	background: #FFFFFF;
 	text-align: justify;
 	font: 13px Arial, Helvetica, sans-serif;
 	color: #8E8C7D;
