--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,8 +1,7 @@
-<h1>Players</h1>
 <table>
   <tr>
     <th>Name</th>
-    <th>Week 1 </th>
+    <th>Week 1 <br><font size="1">13 - 20 Jan</font></th>
     <th>Week 2</th>
     <th>Week 3</th>
     <th>Week 4</th>
@@ -14,7 +13,7 @@
  <% end %>
   </tr>
 
-<% @players.each do |player| %>
+  <% @players.each do |player| %>
   <tr>
     <td>
 	<% if current_user && current_user.name == player.name %>
