--- a/app/assets/stylesheets/default.css.scss
+++ b/app/assets/stylesheets/default.css.scss
@@ -105,6 +105,7 @@ th {
 	background: #F0FBFF; 
 	padding: .8em 1em;	
   	border-color: #D8EBF5 #D8EBF5 #B9DBEE #D8EBF5;	
+	text-align:center;
 }
 td {
 	border-color: #EFEFEF;	
